package com.maxqiu.demo.principle3_dependence_inversion.mode;

/**
 * 电视机接口
 * 
 * @author Max_Qiu
 */
public interface ITv {
    /**
     * 播放
     */
    void play();
}
